--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     
     <h3>Навигация</h3>
 
-    <pre class="code-container">
+    <div class="code-container">
+        <pre>
         <code class="language-python">
 async def navigate_to_url(page: Page, url: str):
     await page.goto(url)  # Переход по указанному URL.
         </code>
         <button class="copy-button" aria-label="Copy code">&#128203;</button>
-    </pre>
+    </pre><div class="tooltip">Copied!</div>
+    </div>
 
     <pre class="code-container">
         <code class="language-python">
