--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 async def navigate_to_url(page: Page, url: str):
     await page.goto(url)  # Переход по указанному URL.
         </code>
+        </pre>
         <button class="copy-button" aria-label="Copy code">&#128203;</button>
-    </pre><div class="tooltip">Copied!</div>
+    <div class="tooltip">Copied!</div>
     </div>
 
     <pre class="code-container">
