--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-    <h2>Playwright Code Snippets</h2>
+    <h2 style="text-align: center;">Playwright Code Snippets</h2>
     
-    <h3>Навигация</h3>
+    <h3 style="text-align: center;">Навигация</h3>
 
     <div class="code-container">
         <pre>
