--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ async def go_forward(page: Page):
         <button class="copy-button" aria-label="Copy code">&#128203;</button>
     </pre>
 
-    <h3 style="text-align: center;>Работа с элементами</h3>
+    <h3 style="text-align: center;">Работа с элементами</h3>
 
     <pre class="code-container">
         <code class="language-python">
@@ -114,7 +114,7 @@ async def check_page_title(page: Page, expected_title: str):
         <button class="copy-button" aria-label="Copy code">&#128203;</button>
     </pre>
 
-    <h3 style="text-align: center;>Клавиатура и мышь</h3>
+    <h3 style="text-align: center;">Клавиатура и мышь</h3>
 
     <pre class="code-container">
         <code class="language-python">
@@ -149,7 +149,7 @@ async def move_mouse_and_click(page: Page, x: int, y: int):
         <button class="copy-button" aria-label="Copy code">&#128203;</button>
     </pre>
 
-    <h3 style="text-align: center;>Выполнение (eval) Javascript-кода</h3>
+    <h3 style="text-align: center;">Выполнение (eval) Javascript-кода</h3>
 
     <pre class="code-container">
         <code class="language-python">
@@ -159,7 +159,7 @@ async def evaluate_js(page: Page, js_code: str):
         <button class="copy-button" aria-label="Copy code">&#128203;</button>
     </pre>
 
-    <h3 style="text-align: center;>Фреймы</h3>
+    <h3 style="text-align: center;">Фреймы</h3>
 
     <pre class="code-container">
         <code class="language-python">
