--- a/keymouse/index.html
+++ b/keymouse/index.html
@@ -6,9 +6,9 @@
     <title>
     Key
 </title>
-    <link href="/static/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="/static/css/codehilite.css">
-    <link rel="stylesheet" href="/static/css/normalize.css">
+    <link href="../static/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="../static/css/codehilite.css">
+    <link rel="stylesheet" href="../static/css/normalize.css">
 </head>
 <body>
 
@@ -16,10 +16,10 @@
         <header>
           <ul class="nav nav-pills">
             <li class="nav-item"><a href="/" class="nav-link">Nav</a></li>
-            <li class="nav-item"><a href="/element1/" class="nav-link">Click</a></li>
-            <li class="nav-item"><a href="/element2/" class="nav-link">Expect</a></li>
-            <li class="nav-item"><a href="/keymouse/" class="nav-link">Key</a></li>
-            <li class="nav-item"><a href="/jsframe/" class="nav-link">JS Frame</a></li>
+            <li class="nav-item"><a href="../element1/" class="nav-link">Click</a></li>
+            <li class="nav-item"><a href="../element2/" class="nav-link">Expect</a></li>
+            <li class="nav-item"><a href="../keymouse/" class="nav-link">Key</a></li>
+            <li class="nav-item"><a href="../jsframe/" class="nav-link">JS Frame</a></li>
           </ul>
         </header>
 
@@ -49,6 +49,6 @@
         </main>
     </div>
 
-    <script src="/static/js/codehilite.js"></script>
+    <script src="../static/js/codehilite.js"></script>
 </body>
 </html>
