--- a/element1/index.html
+++ b/element1/index.html
@@ -6,20 +6,20 @@
     <title>
     Click
 </title>
-    <link href="https://artvandalism.github.io/playwright_cheat/static/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://artvandalism.github.io/playwright_cheat/static/css/codehilite.css">
-    <link rel="stylesheet" href="https://artvandalism.github.io/playwright_cheat/static/css/normalize.css">
+    <link href="/playwright_cheat/static/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="/playwright_cheat/static/css/codehilite.css">
+    <link rel="stylesheet" href="/playwright_cheat/static/css/normalize.css">
 </head>
 <body>
 
     <div class="page">
         <header>
           <ul class="nav nav-pills">
-            <li class="nav-item"><a href="https://artvandalism.github.io/playwright_cheat/" class="nav-link">Nav</a></li>
-            <li class="nav-item"><a href="https://artvandalism.github.io/playwright_cheat/element1/" class="nav-link">Click</a></li>
-            <li class="nav-item"><a href="https://artvandalism.github.io/playwright_cheat/element2/" class="nav-link">Expect</a></li>
-            <li class="nav-item"><a href="https://artvandalism.github.io/playwright_cheat/keymouse/" class="nav-link">Key</a></li>
-            <li class="nav-item"><a href="https://artvandalism.github.io/playwright_cheat/jsframe/" class="nav-link">JS Frame</a></li>
+            <li class="nav-item"><a href="/playwright_cheat/" class="nav-link">Nav</a></li>
+            <li class="nav-item"><a href="/playwright_cheat/element1/" class="nav-link">Click</a></li>
+            <li class="nav-item"><a href="/playwright_cheat/element2/" class="nav-link">Expect</a></li>
+            <li class="nav-item"><a href="/playwright_cheat/keymouse/" class="nav-link">Key</a></li>
+            <li class="nav-item"><a href="/playwright_cheat/jsframe/" class="nav-link">JS Frame</a></li>
           </ul>
         </header>
 
@@ -48,6 +48,6 @@
         </main>
     </div>
 
-    <script src="https://artvandalism.github.io/playwright_cheat/static/js/codehilite.js"></script>
+    <script src="/playwright_cheat/static/js/codehilite.js"></script>
 </body>
 </html>
