--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <img src="/static/playwright-logo.svg" alt="Playwright logo" class="logo-img">
   <title>PlayWright Cheat</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="static/css/prism.css" rel="stylesheet" />
