--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/static/playwright-logo.svg" type="image/svg+xml">
   <title>PlayWright Cheat</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link href="static/css/tailwind.css" rel="stylesheet">
   <link href="static/css/prism.css" rel="stylesheet" />
   <style>
     @font-face {
