--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="static/playwright-logo.svg" type="image/svg+xml">
   <title>PlayWright Cheat</title>
-  <link href="static/css/tailwind.css" rel="stylesheet">
-  <link rel="stylesheet" href="static/css/normalize.css">
-  <link href="static/css/prism.css" rel="stylesheet" />
+  <link defer href="static/css/tailwind.css" rel="stylesheet">
+  <link defer rel="stylesheet" href="static/css/normalize.css">
+  <link defer href="static/css/prism.css" rel="stylesheet">
   <style>
     @font-face {
       font-family: Monocraft;
@@ -111,8 +111,8 @@
     <a href="https://t.me/n1z1code">&copy; 2024 n1z1code</a>
   </footer>
 
-	<script src="static/js/prism.js"></script>
-	<script src="static/js/marked.min.js"></script>
-    <script src="static/js/copy.js"></script>
+	<script defer src="static/js/prism.js"></script>
+	<script defer src="static/js/marked.min.js"></script>
+    <script defer src="static/js/copy.js"></script>
 </body>
 </html>
