--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     @font-face {
       font-family: Monocraft;
       src: url("static/fonts/Monocraft.otf") format("opentype");
+      font-display: swap;
     }
 
     html, body {
-    font-family: Monocraft;
+    font-family: Monocraft, serif;
     height: 100%;
     margin: 0;
 	  padding: 0;
