--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="static/playwright-logo.svg" type="image/svg+xml">
+	<meta property="og:locale" content="ru_RU" />
+	<meta property="og:type" content="article" />
+	<meta property="og:title" content="Шпаргалка по Playwright" />
+	<meta property="og:description" content="Читшит по самым частым операциям в Playwright, с комментариями в коде" />
+	<meta property="og:url" content="https://playwright-cheat.vercel.app" />
+	<meta property="og:site_name" content="https://playwright-cheat.vercel.app" />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:image" content="static/playwright-logo.svg" />
   <title>PlayWright Cheat</title>
   <link defer href="static/css/tailwind.css" rel="stylesheet">
   <link defer rel="stylesheet" href="static/css/normalize.css">
